# autorally-detection

./: CMakeLists.txt  create_database.py  create_image_database.py  create_subcategories.py  hard_negative_mining.py  main.cpp  mean_image.py  svm.pkl  svm.txt  svm_fine_tune.pkl  test_detector.py  test_detector_subcategories.py  train_detector.py  train_detector_multiclass.py  train_detector_subcategories.py  viz.cpp
